@@ -1,3 +1,5 @@
+Fri May 15 18:02:57 MET DST 1998 hannes
+* added type conversion: ideal(map) -> map
 Fri May 15 13:06:32 MET DST 1998 hannes
 * added syntax: kill (....)
 Thu May 14 16:40:43 MET DST 1998 hannes
